tests/multiubuntu/test-cases/TC_26/TC_26_ingress_fromEntities_remote_node.json
[{
	"verdict": "FORWARDED",
	"IP": {
		"source": "10.0.1.10",
		"destination": "10.110.105.183",
		"ipVersion": "IPv4"
	},
	"l4": {
		"TCP": {
			"source_port": 52612,
			"destination_port": 80,
			"flags": {
				"SYN": true
			}
		}
	},
	"source": {
		"namespace": "multiubuntu",
		"labels": [
			"k8s:container=ubuntu-5",
			"k8s:group=group-2"
		],
		"pod_name": "ubuntu-5-deployment-6c57bbb46f-ggbl6"
	},
	"destination": {
		"identity": 2,
		"labels": [
			"reserved:remote-node"
		]
	}
}]
