tests/multiubuntu/test-cases/TC_26/TC_26_ingress_fromEntities_remote_node.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-5
      group: group-2
  ingress:
  - fromEntities:
    - remote-node
---
